--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster_validate.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster_validate.yaml
@@ -200,7 +200,7 @@ phases:
               set -v
               sudo sed -i "s#path: cookbooks#path: /etc/chef/cookbooks#g" /etc/chef/cookbooks/aws-parallelcluster/test/recipes/inspec.yml
               sudo sed -i "s#path: cookbooks#path: /etc/chef/cookbooks#g" /etc/chef/cookbooks/aws-parallelcluster/test/resources/inspec.yml
-              sed -Ei "s#path: .+/aws-parallelcluster#path: /etc/chef/cookbooks/aws-parallelcluster#g" /etc/chef/cookbooks/aws-parallelcluster-platform/test/inspec.yml
+              sed -Ei "s#path: .+/aws-parallelcluster#path: /etc/chef/cookbooks/aws-parallelcluster#g" /etc/chef/cookbooks/aws-parallelcluster-*/test/inspec.yml
               echo "InSpec profiles patched"
 
       - name: NvidiaEnabled
@@ -394,3 +394,15 @@ phases:
               inspec exec test --profiles-path . --controls /tag:install/ --no-distinct-exit
               [[ $? -ne 0 ]] && echo "InSpec validation for platform failed" && exit 1
               echo "InSpec validation for platform passed"
+
+      - name: InSpecValidationsForEnvironment
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              set -vx
+              echo "Performing InSpec validation for environment on the AMI..."
+              cd /etc/chef/cookbooks/aws-parallelcluster-environment
+              inspec exec test --profiles-path . --controls /tag:install/ --no-distinct-exit
+              [[ $? -ne 0 ]] && echo "InSpec validation for environment failed" && exit 1
+              echo "InSpec validation for environment passed"
